vm-agents/client/deployment.yaml
# Source: vm-agents/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-agents
  labels:
    helm.sh/chart: vm-agents-1.0.0
    app.kubernetes.io/name: vm-agents
    app.kubernetes.io/instance: vm-agents
    app: vm-agents
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: vm-agents
      app.kubernetes.io/instance: vm-agents
      app: vm-agents
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        helm.sh/chart: vm-agents-1.0.0
        app.kubernetes.io/name: vm-agents
        app.kubernetes.io/instance: vm-agents
        app: vm-agents
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: vm-agents
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          image: "ved104/aggr-functions:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          env: []
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vm-agents
